Closed #76; Fixed branch column resizing on commit graph overflow

--- a/ui/mainStyle.css
+++ b/ui/mainStyle.css
@@ -42,6 +42,7 @@ body {
     border-color: white;
     border-right: 1px solid;
     position: relative;
+    flex: none;
     width: 16.66%; /* This is the initial width */
 }
 
